# hs-imgui

./: .buckconfig  BUCK  Gen.hs  README.md  flake.nix  hello.hs
.buckconfig.d/: 01-default-platform
examples/draw-demo/: CHANGELOG.md  draw-demo.cabal
examples/draw-demo/app/: Main.hs
examples/imgui-splitter-demo/: CHANGELOG.md  imgui-splitter-demo.cabal
examples/imgui-splitter-demo/app/: Main.hs
examples/plot-demo/app/: Main.hs
examples/plot3d-demo/: plot3d-demo.cabal
examples/plot3d-demo/app/: Main.hs
imgui/: default.nix
imgui-gen/: Gen.hs  default.nix  gen.nix
implot-gen/: Gen.hs  default.nix  gen.nix
implot3d-gen/: Gen.hs
nix/buck2/: default.nix
nix/imgui/: default.nix
nix/implot/: default.nix
nix/implot3d/: default.nix
toolchains/: BUCK  impure_runinfo.bzl
workspace/: StorableInstances.hsc  build.sh  cabal.project  custom_rendering.hs  demo-imgui-builtin.hs  demo-implot-builtin.hs  plot.hs  shim.cpp  test.hs
workspace/draw-demo/: LICENSE  draw-demo.cabal
workspace/draw-demo/app/: Main.hs  StorableInstances.hs
workspace/plot-demo/: CHANGELOG.md  plot-demo.cabal
workspace/plot-demo/app/: Main.hs
