cabal-version:      3.4
name:               plot-demo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable plot-demo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0,
                      extra,
                      fficxx-runtime,
                      imgui,
                      implot,
                      random,
                      stdcxx
    hs-source-dirs:   app
    default-language: GHC2021
